# ncdu

./: Dockerfile  Makefile.am
binaries/Mac10.11/: ncdu
binaries/ubuntu-16.04/: ncdu
doc/: ncdu.pod
src/: browser.c  dir_export.c  dir_import.c  dir_scan.c  dirlist.c  dirlist.h  exclude.c  global.h  help.c  util.c
